Date	Added

01/29
        * Added a crash check to Safety Wall, thanks to LebrEf[TaVu] / Freya for
          pointing it out [celest]
        * Added some optimisations in clif_parse_MapMove, by Ilpalazzo-sama [celest]

01/28
        * Fixed a typo that was causing /in to always report failure even when the
          name was removed from the ignore list [celest]
        * Link "wisexin", "wisexlist" and "wisall" to the PM ignore functions, and
         "friendslistadd" and "friendslistremove" to the friends list functions
          when parsing the packet DB [celest]
        * added clif_parse_PMIgnoreList (packet 0xd3) from jA [celest]
        * Added DUMP_ALL_PACKETS and moved dump packets code in clif_parse a bit to
          support it [celest]
        * Added base code for Party Item Sharing -- still needs some work in client-
          server support [celest]
	* new GC link http://amber.stormbirds.org/~joshs/gc6.4.tar.gz
	  This fixes some issues... works better
        * Added macros skill_chk and skill_get to check for out of bounds errors when
          retrieving info from the skill_db [celest]

01/27
        * Added memory leak fixes with temporary script variables and pets-related
          actions, by End_of_exam / jA 1109 [celest]
        * Kick all characters when the char server disconnects from the map
          server [celest]
        * Added @changelook command for spriters to test view ID's [celest]
        * Added a check to Pneuma to prevent crashing, thanks to LebrEf[TaVu]/Freya for
          pointing it out [celest] [celest]
        * Tweaked garbage collection code after feedback from users
        [SVN 1002: MouseJstr]
	* Fixed TRADE exploits (it cures proxy hack / vending+trade hack) thanks to Freya [Lupus]

01/26
        * Added bug fix for a memory leak caused when a character logs out,
          by End_of_exam / jA 1108 [celest]
        * Fixed a bug in gettick cache when compiling in Windows, thanks to Shinomori